[tool.poetry]
name = "pdf"
version = "0.1.0"
description = ""
authors = ["Gurkan Akcakaya <akcakaya_gurkan@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fpdf = "^1.7.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
